--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -16,6 +16,7 @@ AM_CFLAGS = \
 	-I${top_builddir}/libmm-glib/generated \
 	-I${top_srcdir}/src/ \
 	-I${top_builddir}/src/ \
+	-I${top_srcdir}/src/kerneldevice \
 	$(NULL)
 
 AM_LDFLAGS = \
