--- a/configure.ac
+++ b/configure.ac
@@ -102,6 +102,7 @@ PKG_CHECK_MODULES(MM,
                   gobject-2.0
                   gio-2.0
                   gio-unix-2.0)
+MM_FLAGS="$MM_CFLAGS -DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_36 -DGLIB_VERSION_MAX_ALLOWED=GLIB_VERSION_2_36"
 AC_SUBST(MM_CFLAGS)
 AC_SUBST(MM_LIBS)
 
@@ -110,6 +111,7 @@ PKG_CHECK_MODULES(LIBMM_GLIB,
                   gobject-2.0
                   gio-2.0
                   gio-unix-2.0)
+LIBMM_GLIB_CFLAGS="$LIBMM_GLIB_CFLAGS -DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_36 -DGLIB_VERSION_MAX_ALLOWED=GLIB_VERSION_2_36"
 AC_SUBST(LIBMM_GLIB_CFLAGS)
 AC_SUBST(LIBMM_GLIB_LIBS)
 
@@ -117,6 +119,7 @@ PKG_CHECK_MODULES(MMCLI,
                   glib-2.0 >= $GLIB_MIN_VERSION
                   gobject-2.0
                   gio-2.0)
+MMCLI_CFLAGS="$MMCLI_CFLAGS -DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_36 -DGLIB_VERSION_MAX_ALLOWED=GLIB_VERSION_2_36"
 AC_SUBST(MMCLI_CFLAGS)
 AC_SUBST(MMCLI_LIBS)
 
