broadband-bearer: once connected, set flow control settings
During modem initialization we detected the flow control settings
supported by the modem, and selected the best one to use from them,
notifying it to the device via AT+IFC. The device was therefore
instructed to use that flow control setting for data transmission in
the TTY (i.e. not during AT control commands).

The missing thing was to also configure ourselves our end of the
serial port with the same flow control settings when getting into data
mode. By doing it ourselves, we avoid requiring any explicit setting
in pppd for flow control; pppd can assume the flow control settings
are already the expected ones.

Worth noting that all this setup is completely ignored for TTYs
exposed directly via USB.

https://bugs.freedesktop.org/show_bug.cgi?id=100394

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,8 @@ Makefile.in
 /src/mm-daemon-enums-types.h
 /src/mm-port-enums-types.c
 /src/mm-port-enums-types.h
+/src/mm-helper-enums-types.c
+/src/mm-helper-enums-types.h
 /src/mm-marshal.[ch]
 /src/tests/test-modem-helpers
 /src/tests/test-modem-helpers-qmi
