--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,8 @@ Makefile.in
 
 /plugins/ublox/mm-ublox-enums-types.[ch]
 
+/plugins/telit/mm-telit-enums-types.[ch]
+
 /test/lsudev
 /test/mmtty
 /test/mmrules
