compat: add compatibility definitions for old MM_MODEM_BAND_EUTRAN_* values
Those Roman numeral suffixes in MM_MODEM_BAND_EUTRAN_* were replaced
with 1, 2, 3, ..., etc. This patch adds a compatibility header,
ModemManager-compat.h, to alias the old MM_MODEM_BAND_EUTRAN_* values to
the new values.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -8,6 +8,7 @@ include_HEADERS = \
 	ModemManager-names.h \
 	ModemManager-enums.h \
 	ModemManager-errors.h \
+	ModemManager-compat.h \
 	ModemManager-version.h \
 	ModemManager.h
 
