i18n: deprecate intltool and use only gettext 0.19.8
Instead of mixing both intltool and gettext, which not always work
correctly together, this patch obsoletes intltool and uses only
gettext, which includes support for translating XML files with ITS
rules.

See migration steps for GNOME projects here:
  https://wiki.gnome.org/MigratingFromIntltoolToGettext

The gettext ITS rules for polkit policy files are imported from the
upstream polkit repository. We don't use the polkit-installed rule
files yet because there is no tagged release that contains those files
yet, so we cannot build-depend on any specific polkit version.
  https://bugs.freedesktop.org/show_bug.cgi?id=96940

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ Makefile.in
 /depcomp
 /install-sh
 /ltmain.sh
-/intltool-*
 /missing
 /stamp-h1
 /gtk-doc.make
@@ -84,7 +83,6 @@ Makefile.in
 /po/Makefile.in.in
 /po/POTFILES
 /po/stamp-it
-/po/.intltool-merge-cache
 /po/ModemManager.pot
 /po/Makevars.template
 /po/Rules-quot
@@ -94,6 +92,8 @@ Makefile.in
 /po/insert-header.sin
 /po/quot.sed
 /po/remove-potcdate.sin
+/po/remove-potcdate.sed
+/po/stamp-po
 /po/*.gmo
 
 /docs/reference/api/version.xml
@@ -122,7 +122,6 @@ Makefile.in
 /docs/reference/libmm-glib/xml
 
 /m4/gtk-doc.m4
-/m4/intltool.m4
 /m4/libtool.m4
 /m4/lt*.m4
 /m4/codeset.m4
