--- a/data/org.freedesktop.ModemManager1.policy.in.in
+++ b/data/org.freedesktop.ModemManager1.policy.in.in
@@ -10,8 +10,8 @@
   <icon_name>ModemManager</icon_name>
 
   <action id="org.freedesktop.ModemManager1.Control">
-    <_description>Control the Modem Manager daemon</_description>
-    <_message>System policy prevents controlling the Modem Manager.</_message>
+    <description>Control the Modem Manager daemon</description>
+    <message>System policy prevents controlling the Modem Manager.</message>
     <defaults>
       <allow_inactive>no</allow_inactive>
       <allow_active>auth_admin</allow_active>
@@ -19,8 +19,8 @@
   </action>
 
   <action id="org.freedesktop.ModemManager1.Device.Control">
-    <_description>Unlock and control a mobile broadband device</_description>
-    <_message>System policy prevents unlocking or controlling the mobile broadband device.</_message>
+    <description>Unlock and control a mobile broadband device</description>
+    <message>System policy prevents unlocking or controlling the mobile broadband device.</message>
     <defaults>
       <allow_inactive>no</allow_inactive>
       <allow_active>@MM_DEFAULT_USER_POLICY@</allow_active>
@@ -28,8 +28,8 @@
   </action>
 
   <action id="org.freedesktop.ModemManager1.Contacts">
-    <_description>Add, modify, and delete mobile broadband contacts</_description>
-    <_message>System policy prevents adding, modifying, or deleting this device's contacts.</_message>
+    <description>Add, modify, and delete mobile broadband contacts</description>
+    <message>System policy prevents adding, modifying, or deleting this device's contacts.</message>
     <defaults>
       <allow_inactive>no</allow_inactive>
       <allow_active>@MM_DEFAULT_USER_POLICY@</allow_active>
@@ -37,8 +37,8 @@
   </action>
 
   <action id="org.freedesktop.ModemManager1.Messaging">
-    <_description>Send, save, modify, and delete text messages</_description>
-    <_message>System policy prevents sending or manipulating this device's text messages.</_message>
+    <description>Send, save, modify, and delete text messages</description>
+    <message>System policy prevents sending or manipulating this device's text messages.</message>
     <defaults>
       <allow_inactive>no</allow_inactive>
       <allow_active>@MM_DEFAULT_USER_POLICY@</allow_active>
@@ -46,8 +46,8 @@
   </action>
 
   <action id="org.freedesktop.ModemManager1.Voice">
-    <_description>Accept incoming voice calls or start outgoing voice calls.</_description>
-    <_message>System policy prevents voice calls.</_message>
+    <description>Accept incoming voice calls or start outgoing voice calls.</description>
+    <message>System policy prevents voice calls.</message>
     <defaults>
       <allow_inactive>no</allow_inactive>
       <allow_active>@MM_DEFAULT_USER_POLICY@</allow_active>
@@ -55,8 +55,8 @@
   </action>
 
   <action id="org.freedesktop.ModemManager1.Location">
-    <_description>Enable and view geographic location and positioning information</_description>
-    <_message>System policy prevents enabling or viewing geographic location information.</_message>
+    <description>Enable and view geographic location and positioning information</description>
+    <message>System policy prevents enabling or viewing geographic location information.</message>
     <defaults>
       <allow_inactive>no</allow_inactive>
       <allow_active>@MM_DEFAULT_USER_POLICY@</allow_active>
@@ -64,8 +64,8 @@
   </action>
 
   <action id="org.freedesktop.ModemManager1.USSD">
-    <_description>Query and utilize network information and services</_description>
-    <_message>System policy prevents querying or utilizing network information and services.</_message>
+    <description>Query and utilize network information and services</description>
+    <message>System policy prevents querying or utilizing network information and services.</message>
     <defaults>
       <allow_inactive>no</allow_inactive>
       <allow_active>yes</allow_active>
@@ -73,8 +73,8 @@
   </action>
 
   <action id="org.freedesktop.ModemManager1.Firmware">
-    <_description>Query and manage firmware on a mobile broadband device</_description>
-    <_message>System policy prevents querying or managing this device's firmware.</_message>
+    <description>Query and manage firmware on a mobile broadband device</description>
+    <message>System policy prevents querying or managing this device's firmware.</message>
     <defaults>
       <allow_inactive>no</allow_inactive>
       <allow_active>auth_admin</allow_active>
