--- a/docs/reference/api/Makefile.am
+++ b/docs/reference/api/Makefile.am
@@ -18,7 +18,7 @@ DOC_MODULE = ModemManager
 DOC_MAIN_SGML_FILE = $(DOC_MODULE)-docs.xml
 
 # Extra options to supply to gtkdoc-scan
-SCAN_OPTIONS =
+SCAN_OPTIONS = --deprecated-guards="MM_DISABLE_DEPRECATED"
 
 # The directory containing the source code.
 DOC_SOURCE_DIR = $(top_srcdir)/include
