docs: always rebuild libmm-glib types
So that we don't forget to add new types here manually...
(e.g. MMBearerStats)

--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,7 @@ Makefile.in
 /docs/reference/libmm-glib/libmm-glib.interfaces
 /docs/reference/libmm-glib/libmm-glib.prerequisites
 /docs/reference/libmm-glib/libmm-glib.signals
+/docs/reference/libmm-glib/libmm-glib.types
 /docs/reference/libmm-glib/*.stamp
 /docs/reference/libmm-glib/*.txt
 /docs/reference/libmm-glib/html
