shared-qmi: new interface to handle common QMI implementations
This new interface will include implementations that are shared
between the MMBroadbandModemQmi and the MMBroadbandModemMbim.

For now, it just provides a way to implement the common client
allocation methods.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -366,6 +366,8 @@ endif
 # Additional QMI support in ModemManager
 if WITH_QMI
 ModemManager_SOURCES += \
+	mm-shared-qmi.h \
+	mm-shared-qmi.c \
 	mm-sms-qmi.h \
 	mm-sms-qmi.c \
 	mm-sim-qmi.h \
